lum-core upstream updates

--- a/PACKAGE.conf
+++ b/PACKAGE.conf
@@ -1,3 +1,5 @@
 PACKAGE=ctrlib
-VERSION=2.0.0-beta.9
-MODULES=(lib)
+VERSION=2.0.0-beta.10
+CALLED=(lum::ctrlib lum-ctrlib ctrlib.sh)
+LIB[lib]=ctrlib::
+DEPS[lum-core]='*'
