Support upstream lum-core changes

--- a/PACKAGE.conf
+++ b/PACKAGE.conf
@@ -3,3 +3,4 @@ VERSION=2.0.0-beta.10
 CALLED=(lum::ctrlib lum-ctrlib ctrlib.sh)
 LIB[lib]=ctrlib::
 DEPS[lum-core]='*'
+AUTO=("test src _test/init.sh")
