--- a/PACKAGE.conf
+++ b/PACKAGE.conf
@@ -1,6 +1,5 @@
 PACKAGE=ctrlib
-VERSION=2.0.0-beta.10
-CALLED=(lum::ctrlib lum-ctrlib ctrlib.sh)
+VERSION=2.0.0
 LIB[lib]=ctrlib::
-DEPS[lum-core]='*'
-AUTO=("test src _test/init.sh")
+DEPS[lum-core]=1.0.0
+AUTO=('test src _test/init.sh')
